# sugar

./: CHANGES  autogen.sh  configure.ac
data/: Makefile.am  gtkrc-contrast.em  sugar.schemas.in
data/icons/: Makefile.am
dextrose/: sugar.spec
extensions/cpsection/: Makefile.am
extensions/cpsection/aboutcomputer/: model.py  view.py
extensions/cpsection/aboutme/: model.py  view.py
extensions/cpsection/accessibility/: Makefile.am  __init__.py  model.py  view.py
extensions/cpsection/background/: Makefile.am  model.py  view.py
extensions/cpsection/datetime/: model.py  view.py
extensions/cpsection/keyboard/: model.py
extensions/cpsection/language/: model.py
extensions/cpsection/modemconfiguration/: Makefile.am  config.py  model.py  view.py
extensions/cpsection/network/: model.py  view.py
extensions/cpsection/switchdesktop/: model.py  view.py
extensions/deviceicon/: Makefile.am  network.py  resources.py  touchpad.py  virtualkeyboard.py
extensions/globalkey/: Makefile.am  magnifier.py  screenshot.py  touchpad.py
po/: POTFILES.in  es.po
src/: Makefile.am
src/jarabe/controlpanel/: gui.py  sectionview.py  toolbar.py
src/jarabe/desktop/: activitieslist.py  favoritesview.py  homebox.py  homewindow.py  keydialog.py  meshbox.py  networkviews.py  schoolserver.py  viewtoolbar.py
src/jarabe/frame/: __init__.py  activitiestray.py  clipboardpanelwindow.py  frame.py  notification.py
src/jarabe/intro/: window.py
src/webdav/: Connection.py  Makefile.am  WebdavClient.py  WebdavResponse.py  davlib.py
src/webdav/acp/: AceHandler.py  Makefile.am
(+35 files in other folders)
