SUBDIRS = acp

sugardir = $(pythondir)/webdav
sugar_PYTHON =                  \
             Connection.py      \
             davlib.py          \
             logger.py          \
             NameCheck.py       \
             Utils.py           \
             VersionHandler.py  \
             WebdavRequests.py  \
             Condition.py       \
             Constants.py       \
             __init__.py        \
             qp_xml.py          \
             uuid_.py           \
             WebdavClient.py    \
             WebdavResponse.py


