sugardir = $(pythondir)/webdav/acp
sugar_PYTHON =                  \
             AceHandler.py      \
             Ace.py             \
             Acl.py             \
             GrantDeny.py       \
             __init__.py        \
             Principal.py       \
             Privilege.py
             


